index fixes projects1
index fixes projects1

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <!-- Menu link fragment #id should match a div id. Example: <a href="#home"> links to <div id="home"></div>  -->
       <ul class="main-menu">
         <li><a href="#home">home</a></li>
-        <li><a href="#about">about</a></li>
+        <li><a href="#about">projects</a></li>
         <li><a href="#contact">contact</a></li>
       </ul>                 
     </header>
@@ -46,7 +46,8 @@
           <div id="home" class="content-region hide">
             <h2>Home</h2>
             <p>
-              This is the developer site github account "parajbs-dev" und "parajbs" where all my projects are created.
+              This is the developer site github account "parajbs-dev" und "parajbs" where all my projects are created.</br></br>
+
 	      more coming soon... 
 
             </p>
@@ -55,16 +56,35 @@
           <div id="about" class="content-region hide">
             <h2>Projects</h2>
             <p>
-              comming soon... 
+	    my projects:</br></br>
+&nbsp;&nbsp;	        + Skynet:</br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;               <a href="https://github.com/parajbs-dev/skynetCLI">- skynetCLI</a></br></br>
+
+&nbsp;&nbsp;		+ S5 Netnwork:</br></br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	       <a href="https://github.com/parajbs-dev/s5-setup-scripts">- s5-setup-scripts</a></br></br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	       <a href="https://github.com/parajbs-dev/s5client-nodejs">- s5client-nodejs</a></br></br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	       <a href="https://github.com/parajbs-dev/s5client-js">- s5client-js</a></br></br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	       <a href="https://github.com/parajbs-dev/s5-webportal-website">- s5-webportal-website</a></br></br>
+
+
+&nbsp;&nbsp;	      more comming soon...</br></br>
+
             </p>
           </div>
           
           <div id="contact" class="content-region hide">
             <h2>Contact</h2>
             <p>
-	     discord accounts: parajbs2#6773 and parajbs#6904
-	     github accounts: parajbs-dev and parajbs
-	     more comming soon... 
+	     discord accounts:&nbsp;&nbsp; parajbs2#6773&nbsp; and&nbsp; parajbs#6904</br></br>
+
+	     github accounts:&nbsp;&nbsp;&nbsp;&nbsp; parajbs-dev&nbsp; and&nbsp; parajbs</br></br>
+
+	     more comming soon... </br></br>
+
             </p>
           </div>
           
