--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             <h2>Projects</h2>
             <p>
 	    my projects:</br></br>
-&nbsp;&nbsp;	        + Skynet:</br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;               <a href="https://github.com/parajbs-dev/skynetCLI">- skynetCLI</a></br></br>
+&nbsp;&nbsp;	        + IPFS:</br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;               <a href="https://github.com/parajbs-dev/ipfs-webportal">- ipfs-webportal</a></br></br>
 
 &nbsp;&nbsp;		+ S5 Netnwork:</br></br>
 
@@ -69,6 +69,9 @@
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	       <a href="https://github.com/parajbs-dev/s5client-js">- s5client-js</a></br></br>
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	       <a href="https://github.com/parajbs-dev/s5-webportal-website">- s5-webportal-website</a></br></br>
+
+&nbsp;&nbsp;	        + Skynet:</br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;               <a href="https://github.com/parajbs-dev/skynetCLI">- skynetCLI</a></br></br>
 
 
 &nbsp;&nbsp;	      more comming soon...</br></br>
