--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </p>
           </div>
           
-          <div id="about" class="content-region hide">
+          <div id="projects" class="content-region hide">
             <h2>Projects</h2>
             <p>
 	    my projects:</br></br>
