--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <!-- Page setup -->
     <meta charset="utf-8">
-    <title>Your title here</title>
-    <meta name="description" content="A brief description of your site for search engines">
-    <meta name="author" content="Information about the author here">
+    <title>parajbs-dev</title>
+    <meta name="description" content="open source development decentral apps">
+    <meta name="author" content="parajbs-dev">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
     <link rel="icon" type="image/png" href="favicon.png">
   
@@ -96,7 +96,7 @@
     </div>
 
     <footer>  
-      Footer region
+      parajbs-dev 2022
     </footer>
     
     <!-- Load additional JS scripts here -->
